# ThorCore

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  build.gradle  publish.gradle  publishMavenCentral.gradle
src/androidTest/java/org/ftc9974/thorcore/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/asm/: JNI.s
src/main/asm/neon/: NEONCore.s  NEONVision-arm32.s  NEONVision-arm64.s  NEONVisionMask-arm64.s  NEONVisionROI-arm64.s  NEONVisionStubs.s
src/main/cpp/: JNINEONVision.cpp  JNINativeImageByteBuffer.cpp  JNINativeImageByteBuffer.h  JNIPixy2USB.cpp  JNIUtilities.cpp  JNIUtilities.h  NEONVision.s  NEONVisionStubs.s  ThorCore.cpp  test.cpp
src/main/cpp/libpixyusb2/: CMakeLists.txt  libpixyusb2.h
src/main/cpp/libpixyusb2/include/: usblink.h
src/main/cpp/libpixyusb2/src/: libpixyusb2.cpp  usblink.cpp
src/main/cpp/libusb/: CMakeLists.txt  libusb.h
src/main/java/org/ftc9974/thorcore/: GamepadEnhanced.java  NativeCodeLoader.java  OpModeEnhanced.java  Telepathy.java  TransceiverDoubleBuffer.java
src/main/java/org/ftc9974/thorcore/control/: HolonomicDrivetrain.java  PIDF.java  PhoneAccelerometer.java  PhoneGyroscope.java  PhoneSensor.java  RunningAverage.java  RunningAverageFilter.java  SlidingAverageFilter.java  TFDetector.java  TrapezoidalMotionProfile.java  VIPD.java  VPIDF.java  VoltageRegulator.java
src/main/java/org/ftc9974/thorcore/control/math/: Arc.java  CompositeParametricCurve.java  CubicBezierCurve.java  LineSegment.java  Matrix.java  OldMatrix.java  ParametricCurve.java  Tensor.java  Vector2.java  Vector3.java
src/main/java/org/ftc9974/thorcore/control/navigation/: CompositeNavSource.java  CoordinateSystem.java  EncoderPositionCalculator.java  Fusion2.java  Fusion3.java  Fusion4.java  GuidingVectorField.java  IMUNavSource.java  IntegratingOdometerNavSource.java  MecanumEncoderCalculator.java  MovementStrategy.java  NavSource.java  Navigator.java  OdometerNavSource.java  OdometryKinematics.java  PIDFMovementStrategy.java  PathPlanner.java  ProfiledMovementStrategy.java  ScalarMecanumEncoderCalculator.java  SensorFusionNavStrategy.java  SynchronousNavigator.java  ThreeWheelOdometerNavSource.java  TwoWheelOdometerNavSource.java  VuMarkNavSource.java
src/main/java/org/ftc9974/thorcore/control/rcode/: RCodeParser.java  Token.java
src/main/java/org/ftc9974/thorcore/internal/: CommunicationException.java  LynxI2cDeviceSynchEx.java  RealizableFactory.java
src/main/java/org/ftc9974/thorcore/meta/: EEVals.java  Realizer.java
src/main/java/org/ftc9974/thorcore/meta/annotation/: EEVal.java  Hardware.java  Namespace.java  Realized.java
src/main/java/org/ftc9974/thorcore/robot/: Motor.java  MotorType.java  QuadratureEncoder.java  RSL.java  StallDetector.java
src/main/java/org/ftc9974/thorcore/robot/drivetrains/: KiwiDrive.java  MecanumDrive.java  TankDrive2Wheel.java  TankDrive4Wheel.java
src/main/java/org/ftc9974/thorcore/robot/drivetrains/swerve/: SwerveDrive.java  SwerveModule.java
src/main/java/org/ftc9974/thorcore/robot/sensors/: OdometerWheel.java  Pixy2.java  Pixy2USB.java  Pixy2USBManager.java  USBWebcam.java  USBWebcamBase.java
src/main/java/org/ftc9974/thorcore/samples/: Sample2WheelTankDrive.java  Sample4WheelTankDrive.java  SampleEncoders.java  SampleMecanumDrive.java  SampleNEONStackVision.java  SampleNEONVisionMask.java  SamplePIDF.java  SamplePixy2USB.java  SampleRealizedHardware.java  SampleUSBWebcam.java
src/main/java/org/ftc9974/thorcore/samples/seasonal/powerplay/: SamplePowerPlayVision.java
src/main/java/org/ftc9974/thorcore/seasonal/freightfrenzy/: NEONMarkerVision.java
src/main/java/org/ftc9974/thorcore/seasonal/powerplay/: PowerPlaySeeker.java
src/main/java/org/ftc9974/thorcore/seasonal/ultimategoal/: NEONStackVision.java  StackHeight.java  StandaloneStackVision.java
src/main/java/org/ftc9974/thorcore/util/: BooleanEdgeDetector.java  CompositeFunction.java  Debugger.java  FileUtilities.java  LambdaUtilities.java  ListUtilities.java  MathUtilities.java  MotorUtilities.java  NumericEdgeDetector.java  OpModeUtilities.java  StringUtilities.java  TimingUtilities.java  UpdateLoopHandler.java
src/main/java/org/ftc9974/thorcore/vision/: NEONVision.java  NativeImageByteBuffer.java  Seeker.java
src/main/res/values/: strings.xml
src/main/res/xml/: pixy_device_filter.xml
src/test/java/org/ftc9974/thorcore/: MathUtilitiesTests.java  MatrixTests.java  TelepathyTests.java  Vector2Tests.java
src/test/java/org/ftc9974/thorcore/control/navigation/: MecanumEncoderCalculatorTests.java
src/test/java/org/ftc9974/thorcore/meta/: RealizerTests.java
src/test/resources/: fresnelTestData.csv
